; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_game-capture.c_create_inject_process.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_game-capture.c_create_inject_process.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.game_capture = type { i32, i32, i32 }
%struct.TYPE_6__ = type { i32, i32, i32 }
%struct.TYPE_5__ = type { i32, i32 }

@.str = private unnamed_addr constant [18 x i32] [i32 34, i32 37, i32 115, i32 34, i32 32, i32 34, i32 37, i32 115, i32 34, i32 32, i32 37, i32 108, i32 117, i32 32, i32 37, i32 108, i32 117, i32 0], align 4
@CREATE_NO_WINDOW = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [44 x i8] c"Failed to create inject helper process: %lu\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.game_capture*, i8*, i8*)* @create_inject_process to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_inject_process(%struct.game_capture* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.game_capture*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_6__, align 4
  %12 = alloca %struct.TYPE_5__, align 4
  %13 = alloca i32, align 4
  store %struct.game_capture* %0, %struct.game_capture** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %14 = call i8* @malloc(i32 4096)
  store i8* %14, i8** %7, align 8
  %15 = load %struct.game_capture*, %struct.game_capture** %4, align 8
  %16 = call i32 @use_anticheat(%struct.game_capture* %15)
  store i32 %16, i32* %10, align 4
  %17 = bitcast %struct.TYPE_6__* %11 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %17, i8 0, i64 12, i1 false)
  %18 = bitcast %struct.TYPE_5__* %12 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %18, i8 0, i64 8, i1 false)
  store i32 0, i32* %13, align 4
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @os_utf8_to_wcs_ptr(i8* %19, i32 0, i8** %8)
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @os_utf8_to_wcs_ptr(i8* %21, i32 0, i8** %9)
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  store i32 8, i32* %23, align 4
  %24 = load i8*, i8** %7, align 8
  %25 = load i8*, i8** %8, align 8
  %26 = load i8*, i8** %9, align 8
  %27 = load i32, i32* %10, align 4
  %28 = sext i32 %27 to i64
  %29 = load i32, i32* %10, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %35

31:                                               ; preds = %3
  %32 = load %struct.game_capture*, %struct.game_capture** %4, align 8
  %33 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %32, i32 0, i32 2
  %34 = load i32, i32* %33, align 4
  br label %39

35:                                               ; preds = %3
  %36 = load %struct.game_capture*, %struct.game_capture** %4, align 8
  %37 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 4
  br label %39

39:                                               ; preds = %35, %31
  %40 = phi i32 [ %34, %31 ], [ %38, %35 ]
  %41 = call i32 @swprintf(i8* %24, i32 4096, i8* bitcast ([18 x i32]* @.str to i8*), i8* %25, i8* %26, i64 %28, i32 %40)
  %42 = load i8*, i8** %8, align 8
  %43 = load i8*, i8** %7, align 8
  %44 = load i32, i32* @CREATE_NO_WINDOW, align 4
  %45 = call i32 @CreateProcessW(i8* %42, i8* %43, i32* null, i32* null, i32 0, i32 %44, i32* null, i32* null, %struct.TYPE_5__* %12, %struct.TYPE_6__* %11)
  %46 = icmp ne i32 %45, 0
  %47 = xor i1 %46, true
  %48 = xor i1 %47, true
  %49 = zext i1 %48 to i32
  store i32 %49, i32* %13, align 4
  %50 = load i32, i32* %13, align 4
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %60

52:                                               ; preds = %39
  %53 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 1
  %54 = load i32, i32* %53, align 4
  %55 = call i32 @CloseHandle(i32 %54)
  %56 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %57 = load i32, i32* %56, align 4
  %58 = load %struct.game_capture*, %struct.game_capture** %4, align 8
  %59 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %58, i32 0, i32 0
  store i32 %57, i32* %59, align 4
  br label %63

60:                                               ; preds = %39
  %61 = call i32 (...) @GetLastError()
  %62 = call i32 @warn(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.1, i64 0, i64 0), i32 %61)
  br label %63

63:                                               ; preds = %60, %52
  %64 = load i8*, i8** %7, align 8
  %65 = call i32 @free(i8* %64)
  %66 = load i8*, i8** %8, align 8
  %67 = call i32 @bfree(i8* %66)
  %68 = load i8*, i8** %9, align 8
  %69 = call i32 @bfree(i8* %68)
  %70 = load i32, i32* %13, align 4
  ret i32 %70
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @use_anticheat(%struct.game_capture*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #2

declare dso_local i32 @os_utf8_to_wcs_ptr(i8*, i32, i8**) #1

declare dso_local i32 @swprintf(i8*, i32, i8*, i8*, i8*, i64, i32) #1

declare dso_local i32 @CreateProcessW(i8*, i8*, i32*, i32*, i32, i32, i32*, i32*, %struct.TYPE_5__*, %struct.TYPE_6__*) #1

declare dso_local i32 @CloseHandle(i32) #1

declare dso_local i32 @warn(i8*, i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @bfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
